--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Fruit Mart" />
     <title>Fresh Mart</title>
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <div id="root"></div>
